# SmartHomeSimulator

./: .clang-format  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  config.json  docker-compose.yml
broker/: BUILD.bazel  main.cpp
broker/include/: client_session.hpp  message_broker.hpp
broker/src/: client_session.cpp  message_broker.cpp
client/: BUILD.bazel  main.cpp
client/include/: broker_connection.hpp  hub_manager.hpp  smart_light_proxy.hpp
client/src/: broker_connection.cpp  hub_manager.cpp  smart_light_proxy.cpp
common/: BUILD.bazel
common/include/: ibroker_message_receiver.hpp  iot_deivce.hpp  iot_device.hpp  json_load_config.hpp  net_message.hpp  smart_home_exception.hpp
common/src/: json_load_config.cpp
server/: BUILD.bazel  main.cpp
server/include/: smart_light_emulator.hpp
server/src/: smart_light_emulator.cpp
