load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

cc_library(
    name = "common",

    hdrs = glob(["include/**/*.hpp"]),
    strip_include_prefix = "include",

    visibility = ["//visibility:public"],

    deps = [
        "@boost.asio",
        "@boost.exception",
        "@nlohmann_json//:json",
    ],
)
