load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_library(
    name = "server_lib",
    
    srcs = glob(["src/**/*.cpp"]),
    hdrs = glob(["include/**/*.hpp"]),
    strip_include_prefix = "include",
    
    deps = [
        "//common:common",
        "//client:client_lib",
        "@nlohmann_json//:json",
        "@boost.asio//:boost.asio",
    ],
)

cc_binary(
    name = "server",
    srcs = ["main.cpp"],
    deps = [":server_lib"],
    data = ["//:config_file"]
)